<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".user.LoginActivity"

    >

    <ImageView
        android:id="@+id/top_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_top_blue_circle"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skip >"
        android:textSize="20sp"
        android:layout_toRightOf="@id/top_blue"
        android:layout_marginLeft="25dp"
        android:onClick="homepage"
        />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_blue"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:scaleType="center"
        android:scaleX="0.55"
        android:scaleY="0.55"
        android:src="@drawable/login_logo"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/email"
        android:backgroundTint="@color/lightBlue"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_below="@+id/email_input"
        android:hint="@string/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/lightBlue"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:text="@string/forgot_password_label"
        android:textSize="14sp"
        android:layout_marginStart="100dp"
        tools:ignore="SmallSp"
        />
    <Button
        android:id="@+id/login_btn"
        android:layout_width="120sp"
        android:layout_height="40sp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/forget_password"
        android:background="@drawable/button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/login_label" />

   <com.google.android.gms.common.SignInButton
       android:id="@+id/google_sign_in"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="5sp"
       android:layout_below="@+id/login_btn"
       android:layout_marginStart="145dp"


       />

    <ImageView
        android:id="@+id/bottom_red"
        android:layout_width="wrap_content"
        android:layout_height="157dp"
        android:layout_below="@id/login_btn"


        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"

        android:layout_marginBottom="-85dp"
        android:src="@drawable/bottom_red_circle"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"

        android:onClick="register_page"
        android:text="@string/register_label"
        android:textSize="25sp"

        />
</RelativeLayout>
