<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".user.RegisterActivity">

    <EditText
        android:id="@id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_view"
        android:layout_toStartOf="@id/red_circle"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/name"
        android:backgroundTint="@color/lightBlue"
        android:inputType="text"/>

    <EditText
        android:id="@id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_toStartOf="@id/red_circle"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/email"
        android:backgroundTint="@color/lightBlue"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_toLeftOf="@id/red_circle"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/phone"
        android:backgroundTint="@color/lightBlue"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/gender"
        android:layout_below="@+id/phone"
        android:hint="@string/gender"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:backgroundTint="@color/lightBlue"
        android:inputType="text"/>

    <EditText
        android:id="@+id/birthday"
        android:layout_below="@+id/phone"
        android:layout_toRightOf="@id/gender"
        android:hint="@string/birthday"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightBlue"
        android:inputType="date"/>

    <EditText
        android:id="@+id/password1"
        android:layout_below="@+id/gender"
        android:hint="@string/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_toStartOf="@id/red_circle"
        android:backgroundTint="@color/lightBlue"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/password2"
        android:layout_below="@+id/password1"
        android:hint="@string/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_toStartOf="@id/red_circle"
        android:backgroundTint="@color/lightBlue"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password2"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:text="Already have an account?"
        android:textSize="14sp"
        android:layout_marginHorizontal="45dp"
        android:onClick="login_page" />
    <ImageView
        android:id="@+id/red_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-11dp"
        app:srcCompat="@drawable/side_red_circle" />

    <ImageView
        android:id="@+id/logo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"

        android:layout_marginLeft="-100dp"
        android:layout_marginTop="-30dp"
        app:srcCompat="@drawable/registerlogo" />

    <ImageView
        android:id="@+id/blue_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/bluecirclebottom" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="120sp"
        android:layout_height="40sp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/login"
        android:background="@drawable/button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="Register"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skip >"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="14dp"
        android:onClick="homepage"
        />

    <TextView
        android:id="@+id/register_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_user_view"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="1dp"
        android:text="Register"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/new_user_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="101dp"
        android:textSize="18sp"
        android:text="New User," />

</RelativeLayout>